Support only inlined lenses.
(cherry picked from commit 48c8af05833af5d8956b6d38407dd96cfaaff992)